tdf#93487 - protect GetFocus method call post dispose.

Change-Id: Id61e37e4e9ea62c3dba224e55ddfdc71fb0bfc8c
Reviewed-on: https://gerrit.libreoffice.org/19542
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Stephan Bergmann <sbergman@redhat.com>